--- a/okapi-core/pom.xml
+++ b/okapi-core/pom.xml
@@ -18,12 +18,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.okapi</groupId>
-            <artifactId>okapi-document-node-rest</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>iam</artifactId>
         </dependency>
@@ -212,6 +206,12 @@
             <groupId>org.okapi</groupId>
             <artifactId>okapi-avros</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
         </dependency>
 
     </dependencies>
