--- a/okapi-metrics-proxy/src/test/resources/application-test.yaml
+++ b/okapi-metrics-proxy/src/test/resources/application-test.yaml
@@ -7,6 +7,7 @@ zk:
   backoffNRetries: 2
 
 
+admissionWindowHrs: 3
 dataBucket: okapi-test-data-bucket
 pageSize: 16384 # 16kB pages
 maxCachedPages: 2000
