--- a/okapi-core/pom.xml
+++ b/okapi-core/pom.xml
@@ -213,6 +213,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.rocksdb</groupId>
+            <artifactId>rocksdbjni</artifactId>
+        </dependency>
 
     </dependencies>
 
