--- a/okapi-metrics/src/main/resources/application-test.yaml
+++ b/okapi-metrics/src/main/resources/application-test.yaml
@@ -36,3 +36,5 @@ zk:
 
 dataBucket: okapi-test-data-bucket
 remoteCkptDelaySeconds: 500
+rocksBacklog: 1000
+rocksDir: ${user.home}/.okapi/rocks-dbs
