Consolidate path management inside PathRegistry. Move completely to RocksDB backed instances.

--- a/okapi-core/pom.xml
+++ b/okapi-core/pom.xml
@@ -227,6 +227,10 @@
             <artifactId>re2j</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+        </dependency>
 
     </dependencies>
 
