--- a/okapi-core/pom.xml
+++ b/okapi-core/pom.xml
@@ -202,6 +202,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.okapi</groupId>
+            <artifactId>okapi-statistics</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
