--- a/okapi-metrics/pom.xml
+++ b/okapi-metrics/pom.xml
@@ -122,6 +122,11 @@
             <artifactId>okapi-statistics</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.foundationdb</groupId>
+            <artifactId>fdb-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
