--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>okapi-promql</module>
         <module>okapi-statistics</module>
         <module>okapi-traces</module>
+        <module>okapi-otel-protos</module>
     </modules>
     <properties>
         <java.version>21</java.version>
@@ -55,6 +56,7 @@
         <hadoop.version>3.3.6</hadoop.version>
         <datasketches-java.version>8.0.0</datasketches-java.version>
         <antlr4.version>4.13.1</antlr4.version>
+        <grpc.version>1.65.0</grpc.version>
     </properties>
     <dependencies>
 
