--- a/okapi-otel-protos/pom.xml
+++ b/okapi-otel-protos/pom.xml
@@ -34,6 +34,7 @@
                         <include>opentelemetry/proto/common/**/*.proto</include>
                         <include>opentelemetry/proto/resource/**/*.proto</include>
                         <include>opentelemetry/proto/metrics/**/*.proto</include>
+                        <include>opentelemetry/proto/traces/**/*.proto</include>
                         <include>opentelemetry/proto/collector/metrics/**/*.proto</include>
                     </includes>
                     <outputDirectory>${project.build.directory}/generated-sources/protobuf/java</outputDirectory>
