--- a/okapi-rest/pom.xml
+++ b/okapi-rest/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>okapi-pojos</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- Test-only: Jackson for JSON deserialization validation -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
