--- a/okapi-traces/pom.xml
+++ b/okapi-traces/pom.xml
@@ -21,8 +21,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.foundationdb</groupId>
-            <artifactId>fdb-java</artifactId>
+            <groupId>org.okapi</groupId>
+            <artifactId>okapi-otel-protos</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
