--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,11 @@
                 <version>${protobuf.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
 
             <!-- Parquet + Avro bridge -->
             <dependency>
