Add support for tracing.

--- a/okapi-traces/pom.xml
+++ b/okapi-traces/pom.xml
@@ -25,8 +25,17 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.re2j</groupId>
+            <artifactId>re2j</artifactId>
+            <version>1.7</version>
         </dependency>
         <dependency>
             <groupId>org.okapi</groupId>
