Add logging service draft.

--- a/okapi-avros/pom.xml
+++ b/okapi-avros/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>okapi-avros</artifactId>
-    <name>Avro definitions</name>
+    <name>okapi-avros</name>
 
     <dependencies>
         <dependency>
