--- a/okapi-otel-protos/pom.xml
+++ b/okapi-otel-protos/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>okapi-otel-protos</artifactId>
-    <name>OpenTelemetry Protobuf Definitions</name>
+    <name>okapi-otel-protos</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -35,8 +35,10 @@
                         <include>opentelemetry/proto/resource/**/*.proto</include>
                         <include>opentelemetry/proto/metrics/**/*.proto</include>
                         <include>opentelemetry/proto/trace/**/*.proto</include>
+                        <include>opentelemetry/proto/logs/**/*.proto</include>
                         <include>opentelemetry/proto/collector/trace/**/*.proto</include>
                         <include>opentelemetry/proto/collector/metrics/**/*.proto</include>
+                        <include>opentelemetry/proto/collector/logs/**/*.proto</include>
                     </includes>
                     <outputDirectory>${project.build.directory}/generated-sources/protobuf/java</outputDirectory>
                     <attachProtoSources>true</attachProtoSources>
