--- a/okapi-promql/pom.xml
+++ b/okapi-promql/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>okapi-promql</artifactId>
-    <name>Archetype - okapi-promql</name>
+    <name>okapi-promql</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
