--- a/okapi-protos/pom.xml
+++ b/okapi-protos/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>okapi-protos</artifactId>
-    <name>Protobuf definitions</name>
+    <name>okapi-protos</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
