--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>okapi-statistics</module>
         <module>okapi-traces</module>
         <module>okapi-otel-protos</module>
+        <module>okapi-logs</module>
     </modules>
     <properties>
         <java.version>21</java.version>
@@ -58,6 +59,13 @@
         <antlr4.version>4.13.1</antlr4.version>
         <grpc.version>1.65.0</grpc.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
 
         <dependency>
@@ -414,18 +422,16 @@
                 <version>${cassandra-driver.version}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.roaringbitmap/RoaringBitmap -->
+            <dependency>
+                <groupId>org.roaringbitmap</groupId>
+                <artifactId>RoaringBitmap</artifactId>
+                <version>1.3.0</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
-
-    <repositories>
-        <repository>
-            <id>central</id>
-            <name>Maven Central</name>
-            <layout>default</layout>
-            <url>https://repo1.maven.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <build>
         <extensions>
