--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>okapi-traces</module>
         <module>okapi-otel-protos</module>
         <module>okapi-logs</module>
+        <module>okapi-swim</module>
     </modules>
     <properties>
         <java.version>21</java.version>
@@ -94,6 +95,14 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <!-- Align all OkHttp artifacts via BOM -->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp-bom</artifactId>
+                <version>5.2.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -107,12 +116,7 @@
             </dependency>
 
 
-            <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
-            <dependency>
-                <groupId>com.squareup.okhttp3</groupId>
-                <artifactId>okhttp</artifactId>
-                <version>4.12.0</version>
-            </dependency>
+            <!-- OkHttp versions are inherited from the BOM above -->
 
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -429,6 +433,7 @@
                 <artifactId>RoaringBitmap</artifactId>
                 <version>1.3.0</version>
             </dependency>
+
         </dependencies>
 
     </dependencyManagement>
