--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,13 @@
                 <version>1.3.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-bom</artifactId>
+                <version>1.14.3</version>
+            </dependency>
+
+
         </dependencies>
 
     </dependencyManagement>
