--- a/okapi-logs/pom.xml
+++ b/okapi-logs/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>localstack</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.okapi</groupId>
+            <artifactId>okapi-rest</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
