--- a/okapi-rest/pom.xml
+++ b/okapi-rest/pom.xml
@@ -33,5 +33,12 @@
             <artifactId>jackson-databind</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.okapi</groupId>
+            <artifactId>okapi-protos</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
