--- a/okapi-swim/pom.xml
+++ b/okapi-swim/pom.xml
@@ -69,5 +69,9 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+        </dependency>
     </dependencies>
 </project>
