--- a/okapi-logs/src/main/resources/application-test.yaml
+++ b/okapi-logs/src/main/resources/application-test.yaml
@@ -2,3 +2,11 @@ okapi:
   logs:
     s3:
       region: eu-west-2
+    dataDir: data-pages
+    maxPageBytes: 8388608 # 8 MB by default
+    maxDocsPerPage: 1000
+    maxPageWindowMs: 3600000 # 1hr
+    s3Bucket: test-bucket
+    s3BasePrefix: logs
+    s3UploadGraceMs: 300000 # 5 min grace period
+    idxExpiryDuration: 3600000 # 1hr expiry duration for an index file
