Add automated local deployment. Fix serialization bugs in MetaResponse. Add retries to Ip resolution in K8sSeedRegistry

--- a/okapi-logs/Dockerfile
+++ b/okapi-logs/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 # Copy the prepackaged Spring Boot fat jar
 ARG JAR_FILE=target/okapi-logs-*.jar
+RUN echo "Copying file ${JAR_FILE}"
 COPY ${JAR_FILE} /app/app.jar
 
 EXPOSE 8080
