--- a/pom.xml
+++ b/pom.xml
@@ -439,6 +439,12 @@
                 <version>1.14.3</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.fabric8</groupId>
+                <artifactId>kubernetes-client</artifactId>
+                <version>6.12.1</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
