Add automated local deployment. Fix serialization bugs in MetaResponse. Add retries to Ip resolution in K8sSeedRegistry. Add instructions for local deployment. Add black-box tests.

--- a/okapi-logs/local-test/okapi-logs-multiple.yml
+++ b/okapi-logs/local-test/okapi-logs-multiple.yml
@@ -86,7 +86,7 @@ metadata:
 spec:
   selector:
     app: okapi-logs
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: http
       port: 8080
