--- a/helm/okapi-ingester/values.yaml
+++ b/helm/okapi-ingester/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/okapi-core/okapi-ingester
-  tag: local
+  tag: latest
   pullPolicy: IfNotPresent
 
 serviceAccount:
